--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "alpinejs": "^3.13.0",
+    "antd": "^5.7.2",
     "apexcharts": "^3.42.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
